# periphery-rs

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  install.sh
periphery-sys/: build.rs
periphery-sys/src/: lib.rs
rust-periphery/: Cargo.toml
rust-periphery/src/: lib.rs  spi.rs  utils.rs
